trying to fix feature info layout problems

--- a/src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/modules/_popup.scss
@@ -15,7 +15,6 @@
 .popupContent, .popupSubContent{
   padding:0 20px;
   margin-bottom: $space;
-  height: 92%;
 }
 .popupSubContent{width: 100%; height: 100%;}
 .popup{
